--- a/application.yaml
+++ b/application.yaml
@@ -1,18 +1,18 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: myapp-argo-application
+  name: backend
   namespace: argocd
 spec:
   project: default
 
   source:
-    repoURL: https://github.com/MatthewKennedy/gitops
+    repoURL: https://github.com/MatthewKennedy/gitops.git
     targetRevision: HEAD
     path: dev
   destination:
     server: https://kubernetes.default.svc
-    namespace: myapp
+    namespace: backend
 
   syncPolicy:
     syncOptions:
